Update docker-compose.yml with complete configuration for production services and federated learning nodes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,116 +1,1 @@
-version: '3.8'
-
-services:
-  # Backend API
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile.backend
-    container_name: sovereignmap-backend
-    ports:
-      - "5000:5000"
-    environment:
-      - FLASK_ENV=production
-      - NUM_NODES=10
-      - CXL_VERSION=3.2
-      - CXL_TOTAL_RAM=64.0
-    networks:
-      - sovereignmap
-    healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000/health').read()"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    restart: unless-stopped
-
-  # Frontend (React + Vite)
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: ../Dockerfile.frontend
-    container_name: sovereignmap-frontend
-    ports:
-      - "3000:80"
-    depends_on:
-      - backend
-    networks:
-      - sovereignmap
-    restart: unless-stopped
-
-  # Prometheus for metrics
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: sovereignmap-prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus-data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-    networks:
-      - sovereignmap
-    restart: unless-stopped
-
-  # Grafana for visualization
-  grafana:
-    image: grafana/grafana:latest
-    container_name: sovereignmap-grafana
-    ports:
-      - "3001:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_USERS_ALLOW_SIGN_UP=false
-    volumes:
-      - grafana-data:/var/lib/grafana
-    depends_on:
-      - prometheus
-    networks:
-      - sovereignmap
-    restart: unless-stopped
-
-  # Loki for log aggregation
-  loki:
-    image: grafana/loki:latest
-    container_name: sovereignmap-loki
-    ports:
-      - "3100:3100"
-    volumes:
-      - loki-data:/loki
-    networks:
-      - sovereignmap
-    restart: unless-stopped
-
-  # Fluent Bit for log shipping - DISABLED: fluent-bit.conf not available
-  # fluent-bit:
-  #   image: fluent/fluent-bit:latest
-  #   container_name: sovereignmap-fluent-bit
-  #   volumes:
-  #     - ./fluent-bit.conf:/fluent-bit/etc
-  #   depends_on:
-  #     - loki
-  #   networks:
-  #     - sovereignmap
-  #   restart: unless-stopped
-
-networks:
-  sovereignmap:
-    driver: bridge
-
-volumes:
-  prometheus-data:
-  grafana-data:
-  loki-data:
-
-# Usage:
-# docker-compose up -d
-# 
-# Access points:
-# - Backend API: http://localhost:5000
-# - Frontend: http://localhost:3000
-# - Prometheus: http://localhost:9090
-# - Grafana: http://localhost:3001 (admin/admin)
-# - Loki: http://localhost:3100
-#
-# Note: Fluent Bit service is disabled due to missing config file
+version: '3.8'\n\nservices:\n  backend:\n    image: backend-image:latest\n    restart: always\n    environment:\n      - DATABASE_URL=mysql://user:password@db:3306/dbname\n    depends_on:\n      - db\n\n  frontend:\n    image: frontend-image:latest\n    restart: always\n    ports:\n      - '80:80'\n    depends_on:\n      - backend\n\n  monitoring:\n    image: monitoring-image:latest\n    restart: always\n    ports:\n      - '9090:9090'\n    depends_on:\n      - backend\n\n  db:\n    image: mysql:5.7\n    restart: always\n    environment:\n      MYSQL_ROOT_PASSWORD: root\n      MYSQL_DATABASE: dbname\n      MYSQL_USER: user\n      MYSQL_PASSWORD: password\n\n  coordinator:\n    image: coordinator-image:latest\n    restart: always\n    environment:\n      - COORDINATOR_CONFIG=/path/to/config\n    depends_on:\n      - backend\n\n  worker:\n    image: worker-image:latest\n    restart: always\n    environment:\n      - WORKER_CONFIG=/path/to/config\n    depends_on:\n      - coordinator\n
