--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,1 @@
-version: '3.7'
-services:
-  frontend:
-    image: frontend-image
-    ports:
-      - '80:80'
-    networks:
-      - app-network
-    healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost']
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  backend:
-    image: backend-image
-    ports:
-      - '5000:5000'
-    networks:
-      - app-network
-    environment:
-      - DATABASE_URL=mongodb://mongo:27017/db
-    depends_on:
-      mongo:
-        condition: service_healthy
-    healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:5000']
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  mongo:
-    image: mongo
-    networks:
-      - app-network
-    healthcheck:
-      test: ['CMD', 'mongo', '--eval', 'db.runCommand({ ping: 1 })']
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  monitoring:
-    image: monitoring-image
-    ports:
-      - '9090:9090'
-    networks:
-      - app-network
-    healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:9090']
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  federated-learning:
-    image: federated-learning-image
-    networks:
-      - app-network
-    deploy:
-      replicas: 3
-      restart_policy:
-        condition: on-failure
-
-networks:
-  app-network:
-    driver: bridge
+version: '3.8'\n\nservices:\n  backend:\n    image: your_backend_image:latest\n    ports:\n      - "8000:8000"\n    networks:\n      - federated_network\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n\n  frontend:\n    image: your_frontend_image:latest\n    ports:\n      - "3000:3000"\n    networks:\n      - federated_network\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n\n  prometheus:\n    image: prom/prometheus:latest\n    ports:\n      - "9090:9090"\n    networks:\n      - federated_network\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:9090/health"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n    volumes:\n      - ./prometheus:/etc/prometheus\n\n  grafana:\n    image: grafana/grafana:latest\n    ports:\n      - "3001:3000"\n    networks:\n      - federated_network\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n\n  loki:\n    image: grafana/loki:latest\n    ports:\n      - "3100:3100"\n    networks:\n      - federated_network\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:3100/ready"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n\n  coordinator:\n    image: your_coordinator_image:latest\n    ports:\n      - "8001:8001"\n    networks:\n      - federated_network\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n\n  worker:\n    image: your_worker_image:latest\n    networks:\n      - federated_network\n    deploy:\n      replicas: 5\n    healthcheck:\n      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]\n      interval: 30s\n      timeout: 10s\n      retries: 3\n\nnetworks:\n  federated_network:\n    driver: bridge\n
