--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '18'
           
       - name: Build Docker images
-        run: docker compose -f docker-compose.yml build
+        run: docker compose -f docker-compose.yml build --parallel
 
       - name: Run tests
         run: docker compose -f docker-compose.yml run federated-learning python3 /app/scripts/validate_audit.py
