--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,9 @@ services:
     restart: always
 
   monitoring:
+    build:
+      context: .
+      dockerfile: Dockerfile.monitoring # Ensure this file exists in your root
     image: monitoring:latest
     ports:
       - '3000:3000'
@@ -68,7 +71,6 @@ services:
       - PRIVACY_DELTA=1e-5
       - MIN_PARTICIPANTS=10
       - TARGET_THROUGHPUT_TOPS=85
-    # Updated to point to the correct file in your root directory
     entrypoint: >
       sh -c "python3 /app/scripts/validate_audit.py && python3 /app/sovereignmap_production_backend.py"
     healthcheck:
