--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker images
-      run: docker-compose build
+  run: docker compose build
 # Dashboard: http://localhost:8000
 # Scale nodes: docker-compose up --scale node-1=3
