--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,12 +1,13 @@
-FROM node:20-alpine AS build
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
-
+# Use Nginx to serve static files
 FROM nginx:1.27-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy your static frontend files (html, css, js) to the nginx html folder
+# This assumes your frontend files are in the root or a 'frontend' folder
+COPY . /usr/share/nginx/html
+
+# Copy the nginx configuration we created earlier
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
